--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Contact</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id inventore, ut rerum natus quod in unde veniam repellendus reiciendis officia!</p>
 
           </div>
         </div>
