--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2>I'm <span>Rishabh Kr</span> a Professional in Web developer from bhopal</h2>
-          <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero. Qui voluptas amet.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto blanditiis sunt laboriosam modi perspiciatis accusamus facere perferendis optio aperiam dolor?.</p>
           <a href="contact.html" class="btn-get-started">Available for hire</a>
         </div>
       </div>
