--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>About</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id inventore, ut rerum natus quod in unde veniam repellendus reiciendis officia!</p>
 
             <a class="cta-btn" href="contact.html">Available for hire</a>
 
@@ -148,7 +148,7 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet molestias expedita, architecto impedit nisi non assumenda, illo quos velit cum! Dignissimos consequatur odit temporibus vel aliquid nisi? Cumque, quidem..
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -165,7 +165,7 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet molestias expedita, architecto impedit nisi non assumenda, illo quos velit cum! Dignissimos consequatur odit temporibus vel aliquid nisi? Cumque, quidem..
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -182,7 +182,7 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet molestias expedita, architecto impedit nisi non assumenda, illo quos velit cum! Dignissimos consequatur odit temporibus vel aliquid nisi? Cumque, quidem..
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -199,7 +199,7 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet molestias expedita, architecto impedit nisi non assumenda, illo quos velit cum! Dignissimos consequatur odit temporibus vel aliquid nisi? Cumque, quidem..
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -216,7 +216,7 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eveniet molestias expedita, architecto impedit nisi non assumenda, illo quos velit cum! Dignissimos consequatur odit temporibus vel aliquid nisi? Cumque, quidem..
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
