--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                   <h3>Rishabh Srivastava</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h4>Founder</h4>
                 </div>
               </div>
             </div>
