--- a/gallery-single.html
+++ b/gallery-single.html
@@ -157,7 +157,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong> <span>Nature Photography</span></li>
-                <li><strong>Client</strong> <span>ASU Company</span></li>
+                <li><strong>Client</strong> <span>ASUM Company</span></li>
                 <li><strong>Project date</strong> <span>17 July, 2023</span></li>
                 <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
                 <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
