--- a/gallery-single.html
+++ b/gallery-single.html
@@ -146,7 +146,7 @@
                 Impedit ipsum quae et aliquid doloribus quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
 
               <p>
-                Sunt voluptatum sapiente facilis quo aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
+                Sunt voluptatum sapiente facilis quo aut ipsum repellat. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
               </p>
 
             </div>
