--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Contact</h2>
-            <p>Lorem ipsum dolor consectetur adipisicing elit. Id inventore, rerum natus in veniam repellendus reiciendis officia!</p>
+            <p>Lorem ipsum dolor consectetur adipisicing elit. Id inventore, rerum natus veniam repellendus reiciendis officia!</p>
 
           </div>
         </div>
