--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
             <div class="service-item position-relative">
               <i class="bi bi-activity"></i>
               <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque in corrupti quos dolores hyr et quas molestias excepturi</p>
+              <p>Voluptatum deleniti atque into corrupti quos dolores hyr et quas molestias excepturi</p>
             </div>
           </div><!-- End Service Item -->
 
