--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
             <div class="service-item position-relative">
               <i class="bi bi-bounding-box-circles"></i>
               <h4><a href="" class="stretched-link">Sed ut perspici</a></h4>
-              <p>Duis aute irure dolor in the reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>Duis aute irure dolor in the reprehenderit of in voluptate velit esse cillum dolore</p>
             </div>
           </div><!-- End Service Item -->
 
