--- a/services.html
+++ b/services.html
@@ -108,7 +108,7 @@
             <div class="service-item position-relative">
               <i class="bi bi-calendar4-week"></i>
               <h4><a href="" class="stretched-link">Magni Dolores</a></h4>
-              <p>Excepteur sint on occaecat cupidatat  proident, sunt in culpa ata qui the officia</p>
+              <p>Excepteur sint on occaecat cupidatat  proident, sunt in culpa ata tyo qui the officia</p>
             </div>
           </div><!-- End Service Item -->
 
