--- a/services.html
+++ b/services.html
@@ -116,7 +116,7 @@
             <div class="service-item position-relative">
               <i class="bi bi-broadcast"></i>
               <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis too</p>
             </div>
           </div><!-- End Service Item -->
 
